# bacapibara

./: .gitignore  .test.env  Makefile  NGINX.md  README.md  dashboard.json  docker-compose.yml  fill_db.py  get_friends_by_last_login.sql  locustfile.py  nginx.conf  pg-choice-notes.txt  preinit.py  prometheus.yml  pyproject.toml  ts_explains.sql
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 04f714a52f35_announce.py  2541bc6597ed_messages_ts_index.py  323629b28746_users_ts_index.py  569ead36c55d_add_users_table.py  8b5f8e02228f_add_friends_table.py  bddbbb066c16_create_tables.py
api/: app.py  errors.py  main.py
api/announcements/: __main__.py  announcement_consumer.py  announcement_producer.py
api/auth/: jwt_manager.py  jwt_settings.py
api/connection/: web_socket_connection_manager.py
api/models/: user.py
api/models/api/: chat.py  new_user.py  user.py  user_credentials.py
api/models/db/: user.py
api/models/key_value/: announcement.py  announcements.py  statement.py
api/prometheus/: manager.py
api/queue/: consumer.py  producer.py  settings.py
api/queue/models/: announce_task.py
api/routers/: announcements.py  chat.py  friends.py  login.py  metrics.py  search.py  users.py
api/routers/middlewares/: jwt.py
api/storage/: chat.py  friends.py  message.py  users.py
api/storage/database/: announcements.py  base.py  chat.py  friends.py  manager.py  messages.py  search.py  settings.py  users.py
api/storage/interface/: announcements.py  chat.py  friends.py  search.py  users.py
api/storage/key_value/: announcement.py  base.py
api/storage/memory/: chat.py  friends.py  users.py
bot/: __main__.py  bot_interface.py  gptbot.py  settings.py  triton_client.py
certs/: cert.pem  key.pem
docker/: Dockerfile
models_repository.nosync/onnx_gpt2_lm/1/: README.md
postgres/: README.md  config.sh  pg_hba_follower.conf  postgresql.conf  script.sh
tests/: utils.py
tests/integration/test_api/: conftest.py  test_announcements.py  test_api.py  test_chat_api.py  test_events.py  test_friends_api.py  test_user_api.py
tests/integration/test_db/: conftest.py  test_chats.py  test_friends.py  test_search.py  test_users.py
