[tool.poetry]
name = "backend-academy"
version = "0.1.0"
description = ""
authors = ["Ruslan Sirazhetdinov <ruslansir@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.91.0"
uvicorn = "^0.20.0"
black = "^23.1.0"
pydantic = "^1.10.4"
pytest = "^7.2.1"
httpx = "^0.23.3"
bcrypt = "^4.0.1"
pyjwt = "^2.6.0"
websockets = "^10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
