[tool.poetry]
name = "backend-academy"
version = "0.1.0"
description = ""
authors = ["Ruslan Sirazhetdinov <ruslansir@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.68.2"
uvicorn = "^0.20.0"
black = "^23.1.0"
pydantic = "^1.10.4"
pytest = "^7.2.1"
httpx = "^0.23.3"
bcrypt = "^4.0.1"
pyjwt = "^2.6.0"
websockets = "^10.4"
psycopg2 = "^2.9.5"
pytest-dotenv = "^0.5.2"
alembic = "^1.10.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.7"}
asyncpg = "^0.27.0"
requests = "^2.28.2"
pytest-asyncio = "^0.21.0"
asgi-lifespan = "^2.0.0"
prometheus-client = "^0.16.0"
starlette-exporter = "^0.15.1"
psutil = "^5.9.4"
python-dateutil = "^2.8.2"
locust = "^2.15.1"
redis = "^4.5.5"
aio-pika = "^9.0.7"
optimum = {extras = ["exporters"], version = "^1.8.7"}
tritonclient = {extras = ["http"], version = "^2.34.0"}
torch = "^2.0.1"
websocket-client = "^1.5.3"
rel = "^0.4.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
